menambahkan style pada card

--- a/index.html
+++ b/index.html
@@ -63,47 +63,45 @@
     <!-- last navbar -->
 
 
+    <!-- jumbotron -->
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col">
+                    <img src="img/logo.png" alt="logo smk" height="200px">
+                    <h1>SMK N 1 Kawunganten</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et accusantium recusandae temporibus nobis ipsum?</p>
+                    <button>LIHAT</button>
+                </div>
+            </div>
+        </div>
+    <!-- last jumbotron -->
 
     <!-- body -->
         <div class="container">
 
-            <!-- jumbotron -->
-                <div class="jumbotron">
-                    <div class="row">
-                        <div class="col">
-                            <img src="img/logo.png" alt="logo smk" height="200px">
-                            <h1>SMK N 1 Kawunganten</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et accusantium recusandae temporibus nobis ipsum?</p>
-                            <button>LIHAT</button>
-                        </div>
-                    </div>
-                </div>
-            <!-- last jumbotron -->
-
-
             <!-- tentnag -->
-                <div class="tentang" id="tentang">
+                <section class="tentang" id="tentang">
                     <div class="row">
                         <div class="col">
                             <h1 class="heading">Tentang Kami</h1>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid pariatur veniam rem tempora ipsam architecto voluptatem quod ipsa accusantium cumque repudiandae cum, deleniti minus tenetur error mollitia quam, velit id?</p>
                         </div>
-                        <div class="co">
+                        <div class="col">
                             <img src="img/gedung-sekolah.png" alt="gedung sekoah" height="200px">
                         </div>
                     </div>
-                </div>
+                </section>
             <!-- last tentang -->
 
 
             <!-- jurusan -->
-                <div class="jurusan" id="jurusan">
+                <section class="jurusan" id="jurusan">
                     <h1 class="heading">Jurusan</h1>
                     <div class="row">
                         <div class="col">
                             <div class="card-style">
                                 <div class="card-img">
-                                    <img src="img/jurusan-tkr.png" alt="teknik kendaraan ringan" height="170px">
+                                    <img src="img/jurusan-tkr.png" alt="teknik kendaraan ringan" height="120px">
                                 </div>
                                 <p class="card-subtitle">Teknik Kendaraan Ringan</p>
                             </div>
@@ -111,7 +109,7 @@
                         <div class="col">
                             <div class="card-style">
                                 <div class="card-img">
-                                    <img src="img/jurusan-tsm.png" alt="teknik sepeda motor" height="170px">
+                                    <img src="img/jurusan-tsm.png" alt="teknik sepeda motor" height="140px">
                                 </div>
                                 <p class="card-subtitle">Teknik Sepeda Motor</p>
                             </div>
@@ -127,13 +125,13 @@
                         <div class="col">
                             <div class="card-style">
                                 <div class="card-img">
-                                    <img src="img/jurusan-animasi.png" alt="animasi" height="170px">
+                                    <img src="img/jurusan-animasi.png" alt="animasi" height="120px">
                                 </div>
                                 <p class="card-subtitle">Animasi</p>
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
             <!-- last jurusan -->
 
 
