--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>SMK N 1 Kawunganten</title>
 
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="fontawesome-free/css/all.min.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
@@ -49,17 +50,17 @@
             </div>
 
 
-            <div class="sidebar" id="sidebar">
-                <ul>
-                    <li class="sidebar-item"><a href="#home"><img src="img/logo.png" alt="logo smk saka" height="100px"></a></li>
-                    <li class="sidebar-item"><a href="#home">home</a></li>
-                    <li class="sidebar-item"><a href="#tentang">tentang</a></li>
-                    <li class="sidebar-item"><a href="#jurusan">jurusan</a></li>
-                    <li class="sidebar-item"><a href="#fasilitas">fasilitas</a></li>
-                    <li class="sidebar-item"><a href="#login">login</a></li>
-                </ul>
-            </div>
         </div>
+                <div class="sidebar" id="sidebar">
+                    <ul>
+                        <li class="sidebar-item"><a href="#home"><img src="img/logo.png" alt="logo smk saka" height="100px"></a></li>
+                        <li class="sidebar-item"><a href="#home">home</a></li>
+                        <li class="sidebar-item"><a href="#tentang">tentang</a></li>
+                        <li class="sidebar-item"><a href="#jurusan">jurusan</a></li>
+                        <li class="sidebar-item"><a href="#fasilitas">fasilitas</a></li>
+                        <li class="sidebar-item"><a href="#login">login</a></li>
+                    </ul>
+                </div>
     <!-- last navbar -->
 
 
@@ -192,7 +193,14 @@
             <!-- footer -->
                 <div class="footer">
                     <div class="row">
-                        <img src="img/logo.png" alt="logo smk" height="200px">
+                        <img src="img/logo.png" alt="logo smk" height="200px"><br>
+                        <ul class="sosmed-menu">
+                            <li class="sosmed-item"><a href="#facebook"><i class="fab fa-facebook"></i></a></li>
+                            <li class="sosmed-item"><a href="#twitter"><i class="fab fa-twitter"></i></a></li>
+                            <li class="sosmed-item"><a href="#instagram"><i class="fab fa-instagram"></i></a></li>
+                            <li class="sosmed-item"><a href="#google"><i class="fab fa-google"></i></a></li>
+                            <li class="sosmed-item"><a href="#youtube"><i class="fab fa-youtube"></i></a></li>
+                        </ul>
                     </div>
                     <div class="row">
                         <div class="col">
@@ -219,19 +227,9 @@
                                 <li>Perpustakaan</li>
                             </ul>
                         </div>
-                        <div class="col">
-                            <h1 class="title-footer">Hubungi Kami</h1>
-                            <ul>
-                                <li><a href="facebook"><i class="fab fa-facebook"></i></a></li>
-                                <li><a href="twitter"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="google"><i class="fab fa-google"></i></a></li>
-                                <li><a href="instagram"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="youtube"><i class="fab fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
                     </div>
+                    <footer>Copyright&copy; 2020 | SMK N 1 Kawunganten . All right reserved.</footer>
                 </div>
-                <footer>Copyright&copy; 2020 | SMK N 1 Kawunganten . All right reserved.</footer>
             <!-- last footer -->
             
             
